--- a/exercise-2/css/main.css
+++ b/exercise-2/css/main.css
@@ -14,3 +14,28 @@ img {
 
 
 /* Assign styles here */
+.label {
+    position: absolute;
+    color: white;
+}
+
+.top {
+    top: 0px
+}
+.center {
+    top: 50%;
+}
+.bottom {
+    bottom: 5px;
+}
+
+.left {
+    left: 5px;
+}
+.middle {
+    width: 100%;
+    text-align: center;
+}
+.right {
+    right: 5px;
+}
